# AionAssistant

./: AionAssistant.sln  README.md
AionAssistant/: AionAssistant - Copy.vcxproj  AionAssistant.aps.bak  AionAssistant.cpp  AionAssistant.def  AionAssistant.vcxproj  AionAssistant.vcxproj.filters  AionPlayer.h  Assembly.asm  AttachHelper.cpp  Entity.cpp  Entity.h  Player.cpp  Structures.h  attach_helper.cpp  attach_helper.h  dllmain.cpp  dllmain.h  exports.cpp  hook_handler.cpp  hook_handler.h  memoryLoop.cpp  memoryLoop.h  memory_loop.cpp  memory_loop.h  resource.h  test.h  test_thing.cpp  test_thing.h
AionAssistant-rs/: Cargo.toml
AionAssistant-rs/src/: lib.rs  lib_runner.rs
AionAssistant-rs/src/aion/: mod.rs
AionAssistant-rs/src/aion/structures/: mod.rs
AionAssistant-rs/src/aion/structures/dialog_object/: mod.rs
AionAssistant-rs/src/aion/structures/entity/: c_entity.rs  c_entity_system.rs  character_object.rs  mod.rs
AionAssistant-rs/src/aion_assistant/: entity_detour.rs  gui.rs  helpers.rs  mod.rs  structure_offsets.rs
AionAssistant-rs/src/aion_assistant/functions/: game.rs
AionAssistant-rs/src/aion_assistant/functions/game/: player.rs
AionAssistant-rs/src/aion_assistant/threads/: mod.rs
AionAssistant-rs/src/aion_assistant/threads/managers/: entity_map.rs  lua_test.rs  mod.rs  time_updater.rs
AionAssistant-rs/src/aion_assistant/threads/structures/: mod.rs
AionAssistant/CodeCave/: Assembly.asm  detour.cpp  detour.h
AionAssistant/Handlers/: entity_handler.cpp  entity_handler.h
AionAssistant/Information/: Finding Inventory.txt  x64Dbg bypass Themida.txt
AionAssistant/Models/: AionEntity.h  Structures.h
AionAssistant/include/thread_managers/: threads.hpp
AionAssistant/src/: internalstructures.h
AionAssistant/src/cave/: Assembly.asm  Source.txt
AionAssistant/src/helpers/: get_main_hwnd.cpp  helpers.hpp
AionAssistant/src/memory/: accessors.cpp  memory.hpp
AionAssistant/src/memory/entity/: AionEntity.cpp  AionEntity.h
AionAssistant/src/structures/: aion.hpp  internalstructures.hpp
AionAssistant/src/thread_managers/: EntityMapManager.cpp  InputManager.cpp  InputSelfManager.cpp  LuaVirtualMachineManager.cpp  TimeManager.cpp  TrayManager.cpp  threads.hpp
AionAssistant/src/threads/: entity.cpp  entity_map_cleaner.cpp  threads.hpp  timeupdater.cpp
Dependencies - Copy/detours/: syelog.lib
Dependencies - Copy/traypp/include/core/windows/: tray.hpp
Dependencies/detours/: detours.lib
Dependencies/traypp/: tray.lib
Dependencies/traypp/include/core/: traybase.hpp
EntityDetour/: EntityDetour.vcxproj  EntityDetour.vcxproj.filters
EntityDetour/include/: EntityDetour.hpp
EntityDetour/src/: Assembly.asm  EntityDetour.cpp
Generics/: Generics.vcxproj  Generics.vcxproj.filters  helpers.hpp
