[package]
name = "untitled1"
version = "0.1.0"
authors = ["ME <ME@users.asdf.github.com>"]
edition = "2021"

[lib]
name = "cheat"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.138", features = ["use_std", "extra_traits"] }
getset = "0.1.2"
toy-arms = { git = "https://github.com/pseuxide/toy-arms", features = ["external"] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "std",
    "everything",
    "minwindef",
    "consoleapi",
    "wincon",
    "libloaderapi"
]

#[dependencies.windows]
#version = "0.43.0"
#features = [
#    "Win32_Foundation",
#    "Win32_System_Console"
#]
