[package]
name = "AionAssistant"
version = "448.0.0"
authors = ["ME <ME@users.asdf.github.com>"]
edition = "2021"

[lib]
name = "aion_assistant"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#getset = "0.1.2"
debug_print = "1.0.0"
once_cell = "1.16.0"
hudhook = { version = "0.4.0", git = "https://github.com/veeenu/hudhook", branch = "main" }
# hudhook = { version = "0.4.0", path = "C:\\Users\\Ace\\CLionProjects\\hudhook" }
active-win-pos-rs = "0.7.1"
mlua = { version = "0.8.7", features = ["lua54", "vendored"] }
#pelite = { version = "0.10.0", git = "https://github.com/CasualX/pelite", branch = "master" }

# Game hacking related dependencies
toy-arms = { version = "0.9.4", git = "https://github.com/pseuxide/toy-arms" }
detour = { git = "https://github.com/veeenu/detour-rs" }
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
]}
#git = "https://github.com/microsoft/windows-rs"
#branch = "master"